methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
  while (biscuit==0){
  ^